Add images displayed in RecyclerView

--- a/app/src/main/res/layout/layout_recipe_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_list_item.xml
@@ -20,8 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/recipe_image_height"
                 android:scaleType="centerCrop"
-                android:id="@+id/recipe_image"
-                android:src="@drawable/ic_launcher_background"/>
+                android:id="@+id/recipe_image" />
 
 
             <LinearLayout
